remove old dependencies, add comments

--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -7,12 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Judge some drawings !</title>
   <script src="jquery-1.11.2.min.js"></script>
-  <script src="mmturkey-0.6.js"></script>
    <script src="papaparse.js"></script>
-   <script src="jquery-ui.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="uptake_style.css" />
-  <link rel="stylesheet" href="jquery-ui.css" /> 
+  <!-- <link rel="stylesheet" href="jquery-ui.css" />  -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 
