--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -10,6 +10,7 @@
    <script src="papaparse.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="uptake_style.css" />
+  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   <!-- <link rel="stylesheet" href="jquery-ui.css" />  -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
