debugging image reading

--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="uptake_style.css" />
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-  <!-- <link rel="stylesheet" href="jquery-ui.css" />  -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 
@@ -81,7 +80,8 @@
   </p> 
 </div>
 
-  
+
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="sketchRecognize_12AFC.js"></script>
 </body>
 
