--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -81,7 +81,7 @@
 </div>
 
 
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script src="https//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="sketchRecognize_12AFC.js"></script>
 </body>
 
