--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -8,6 +8,7 @@
   <title>Judge some drawings !</title>
   <script src="jquery-1.11.2.min.js"></script>
    <script src="papaparse.js"></script>
+  <script src="jquery-ui.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="uptake_style.css" />
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
@@ -81,7 +82,7 @@
 </div>
 
 
-<script src="https//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<!-- <script src="https//code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
 <script src="sketchRecognize_12AFC.js"></script>
 </body>
 
