--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Judge some drawings !</title>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
   <script src="jquery-1.11.2.min.js"></script>
    <script src="papaparse.js"></script>
   <script src="jquery-ui.js"></script>
