add avaliable choices

--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -52,6 +52,7 @@
     <h4>
     <p id="drawingPrompt">What does this look like?</p> 
     <p> Start typing and choose your answer below </p>
+    Avaliable choices are: "airplane", "bike", "bird", "car", "cat", "chair", "cup", "hat", "house", "rabbit", "tree", "watch".
     </h4>
     <img src="images/toy.png" width=200px height=200px id="imagePlaceholder">
 
