change irb instructions

--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -12,7 +12,6 @@
   <script src="jquery-ui.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="uptake_style.css" />
-<!--   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>  -->
    <link rel="stylesheet" href="jquery-ui.css" /> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
@@ -21,19 +20,18 @@
 
  <!-- The instructions slide. -->
   <div class="slide" id="instructions">
-    <br>
+<!--     <br>
     <img src="images/stanford.png" alt="Stanford University">
     <p id='logo-text'>Stanford Language and Cognition Lab</p>
     <br>
-    <br>
+    <br> -->
 <br>
     <button type="button" onclick="this.blur(); experiment.next();">Start</button>
 
     <p class="block-text">
-    In this survey, you'll be asked to recognize what is depicted in around 100-150 different sketches of different categories. You'll choose an answer from a drop down menu. There are only 12 choices, and guesses are encouraged; please make your best guess if you cannot tell.
-    <p class="block-text" id="legal">By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact us at <a href="mailto://bria@stanford.edu.">bria@stanford.edu</a>.
-      You must be at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences.
-      Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you. 
+    Hello! In this survey, you'll be asked to recognize what is depicted in around 100-150 different sketches of different categories. You'll choose an answer from a drop down menu. There are only 12 choices, and guesses are encouraged; please make your best guess if you cannot tell.
+
+    <p class="block-text" id="legal">By completing this study, you are participating in a study being performed by cognitive scientists at the University of California, San Diego, USA. If you have questions about this research, please contact the Cognitive Tools Lab at cogtoolslab.requester@gmail.com or the experimenter directly at brialorelle@gmail.com. You must be at least 18 years old to participate. There are neither specific benefits nor anticipated risks associated with participation in this study. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not reveal any personal information about yo
   </div>
 
 
