--- a/experiments/Recognition_ratings/experiment/index.html
+++ b/experiments/Recognition_ratings/experiment/index.html
@@ -82,6 +82,15 @@
   </p> 
 </div>
 
+ <div class="slide" id="catch_trial">
+      <p><b>Please describe the task you were just completing.</b></p>
+      <p>
+        <input type="text" id="catch" name="catch" style="width:40%" value="">
+        </textarea>
+        <button type="button" id="catchsubmit" onClick="experiment.submit_catch()">Submit</button>
+  </p> 
+</div>
+
 
 <!-- <script src="https//code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
 <script src="sketchRecognize_12AFC.js"></script>
